--- a/package.json
+++ b/package.json
@@ -2,25 +2,38 @@
   "name": "test-task1",
   "version": "0.1.0",
   "private": true,
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "dependencies": {
+    "@craco/craco": "^7.0.0",
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
     "env-cmd": "^10.1.0",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.6.0",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "env-cmd -e development react-scripts start",
-    "build": "react-scripts build",
+    "start": "env-cmd -e development craco start & npm run ts:watch",
+    "build": "craco build",
     "lint:fix": "eslint ./src --fix",
     "prettier": "prettier --write ./src",
-    "lint": "eslint '**/*.{js,ts,tsx}' --ignore-pattern node_modules/",
-    "ts:check": "tsc --noEmit --incremental",
-    "prepare": "husky install"
+    "lint": "eslint **/*.{js,ts,tsx} --ignore-pattern node_modules/",
+    "ts:check": "bash -c tsc --noEmit --incremental",
+    "prepare": "husky install",
+    "ts:watch": "tsc --noEmit --incremental --watch --pretty"
   },
   "husky": {
     "hooks": {
@@ -38,6 +51,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/eslint-plugin-tslint": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
